--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LoveLetter - To My Beautiful Girlfriend ❤️</title>
-    <meta name="description" content="A romantic love letter website dedicated to my amazing girlfriend" />
-    <meta name="author" content="Lovable" />
+    <meta
+      name="description"
+      content="A romantic love letter website dedicated to my amazing girlfriend"
+    />
+    <meta name="Olisemeka Onochie" content="Gf Post" />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Great+Vibes:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Great+Vibes:wght@400&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta property="og:title" content="LoveLetter - To My Beautiful Girlfriend ❤️" />
-    <meta property="og:description" content="A romantic love letter website dedicated to my amazing girlfriend" />
+    <meta
+      property="og:title"
+      content="LoveLetter - To My Beautiful Girlfriend ❤️"
+    />
+    <meta
+      property="og:description"
+      content="A romantic love website dedicated to my amazing girlfriend"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
